--- a/ui_card/index.html
+++ b/ui_card/index.html
@@ -5,25 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ui_card</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <div class="profile_post_information">
-            <p class="profile_name">Title</p>
-            <p class="profile_post_description">Subtitle</p>
-        </div>
-        <img src="/ui_card/images_ui_card/Avatars Default with Backdrop@3x.png" class="profile_image" alt="profile picture"/>
-        <img src="/ui_card/images_ui_card/more_icon@3x.png" class="more_icon" alt="more icon"/>
-    </header>
-    <img src="/ui_card/images_ui_card/climbing.png" class="profile_post_image" alt="user posting picture">
-    <footer>
-        <div class="likes">
-            <img src="/ui_card/images_ui_card/Heart@3x.png" class="heart_icon" alt="like icon"/>
-            <p class="likes_number"></p>
-        </div>
-        <img src="/ui_card/images_ui_card/Message@3x.png" class="messages_icon" alt="messages icon">
-        <img src="/ui_card/images_ui_card/camera_icon@3x.png" class="camera_icon" alt="camera icon">
-        <img src="/ui_card/images_ui_card/share_icon@3x.png" class="share_icon" alt="share icon">
-    </footer>
+    <div class="card">
+        <header>
+            <div class="profile_post_information">
+                <p class="profile_name">Title</p>
+                <p class="profile_post_description">Subtitle</p>
+            </div>
+            <img src="/ui_card/images_ui_card/Avatars Default with Backdrop@3x.png" class="profile_image" alt="profile picture"/>
+            <img src="/ui_card/images_ui_card/more_icon@3x.png" class="more_icon" alt="more icon"/>
+        </header>
+        <img src="/ui_card/images_ui_card/climbing.png" class="profile_post_image" alt="user posting picture">
+        <footer>
+            <div class="likes">
+                <img src="/ui_card/images_ui_card/Heart@3x.png" class="heart_icon" alt="like icon"/>
+                <p class="likes_number"></p>
+            </div>
+            <img src="/ui_card/images_ui_card/Message@3x.png" class="messages_icon" alt="messages icon">
+            <img src="/ui_card/images_ui_card/camera_icon@3x.png" class="camera_icon" alt="camera icon">
+            <img src="/ui_card/images_ui_card/share_icon@3x.png" class="share_icon" alt="share icon">
+        </footer>
+    </div>
 </body>
 </html>
